--- a/style1.css
+++ b/style1.css
@@ -8,8 +8,49 @@ body {
 
     background-size: cover;
     background-position: center center;
+    
 }
 
+#wrapper {
+    vertical-align: middle;
+    text-align: center;
+    width:100%;
+} 
+#bg {
+    display:block;
+    width:100%; 
+    height:100%;
+    object-fit: cover;
+    position: absolute;
+    z-index:-2;
+} 
+
+button {
+    align-self: flex-end;
+    border: 1px solid #0b77b6 ;
+    font-size: 1.2rem;
+    background: #0b77b6;
+    color: #ffffff !important;
+    font-weight: 100;
+    padding: 10px;
+    text-transform: uppercase;
+    display: inline-block;
+    transition: all 0.3s ease 0s;
+}
+
+#buttons {
+    display: flex;
+    justify-content: space-between;
+    width: 100vw;
+}
+
+button:hover {
+    color: #ffffff !important;
+    font-weight: 700 !important;
+    letter-spacing: 3px;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    }
 
 #overlay {
     position:absolute;
@@ -25,39 +66,44 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    /* background-color: blueviolet; */
     justify-content: flex-end;
     align-items: center;
 }
 
 #quote {
-    height: 50%;
+    position:relative;
+    z-index:1;
+    height: 60%;
     width: 50%;
     font-size: 6rem;
     text-align: center;
-    /* border: 1px solid black; */
 }
 
 #settings {
     background-color: rgba(50, 115, 220, 0.3);;
-    border-radius: 10px;
+    border-radius: 10px 10px 0 0;
     width: 90vw;
     display: grid;
     grid-template-columns: 50% 50%;
-    /* border: 1px solid black; */
     justify-content: space-between;
     align-items: center;
     justify-items: center;
     padding-bottom: 10px;
+    height: 20vh;
+    overflow: hidden;
 }
 
+h2 {
+    text-align: center;
+    user-select: none;
+}
 label {
     font-size: 1.3rem;
     padding: 5px;    
 }
 
 #displaySettings > div {
-    margin: 10px 0;
+    margin: 0;
 }
 
 textarea {
