--- a/style1.css
+++ b/style1.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap');
+
 body {
     margin: 0;
     color: white;
@@ -11,17 +13,19 @@ body {
     
 }
 
-#wrapper {
-    vertical-align: middle;
-    text-align: center;
-    width:100%;
-} 
+
 #bg {
-    display:block;
+    /* display:inline-block; */
+    
     width:100%; 
     height:100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     position: absolute;
+    /* left:0;
+    right:0;
+    margin-left: auto;
+    margin-right: auto; */
+    
     z-index:-2;
 } 
 
@@ -71,9 +75,12 @@ button:hover {
 }
 
 #quote {
+    font-family: 'Pinyon Script', cursive;
+    font-weight: bold;
+    letter-spacing: 2px;
     position:relative;
     z-index:1;
-    height: 60%;
+    height: 50%;
     width: 50%;
     font-size: 6rem;
     text-align: center;
