--- a/style1.css
+++ b/style1.css
@@ -90,14 +90,21 @@ button:hover {
     background-color: rgba(50, 115, 220, 0.3);;
     border-radius: 10px 10px 0 0;
     width: 90vw;
-    display: grid;
+    display: flex;
     grid-template-columns: 50% 50%;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     justify-items: center;
     padding-bottom: 10px;
     height: 20vh;
     overflow: hidden;
+}
+
+@media (max-width: 1100px ) {
+    #settings {
+        flex-direction: column;
+        height: 50vh;
+    }
 }
 
 h2 {
